--- a/markshiny.Rmd
+++ b/markshiny.Rmd
@@ -21,11 +21,17 @@ Waiting time between eruptions and the duration of the eruption for the
 Old Faithful geyser in Yellowstone National Park, Wyoming, USA.
 
 ```{r}
-selectInput("n_breaks", label = "Number of bins:",
-            choices = c(10, 20, 35, 50), selected = 20)
-
-sliderInput("bw_adjust", label = "Bandwidth adjustment:",
+  
+  selectInput(inputId = "n_grietas",
+              label = "Number of bins in histograma (approximate):",
+              choices = c(10, 20, 35, 50),
+              selected = 20)
+  sliderInput("bw_adjust", label = "Bandwidth adjustment:",
             min = 0.2, max = 2, value = 1, step = 0.2)
+  sliderInput(inputId = "constante_vertical",
+              label = "Vertical constant",
+              min = min(faithful$eruptions), max = max(faithful$eruptions),value =                       mean(faithful$eruptions), step = 0.5)
+  
 ```
 
 Column
@@ -35,8 +41,10 @@ Column
 
 ```{r}
 renderPlot({
-  hist(faithful$eruptions, probability = TRUE, breaks = as.numeric(input$n_breaks),
-       xlab = "Duration (minutes)", main = "Geyser Eruption Duration")
+  hist(faithful$eruptions, probability = TRUE, breaks = as.numeric(input$n_grietas),
+       xlab = "Duration (minutes)", main = "Geyser Eruption Duration", col = "gray")
+  
+  abline(v = input$constante_vertical, col = "red")
   
   dens <- density(faithful$eruptions, adjust = input$bw_adjust)
   lines(dens, col = "blue")
